		System: fixed out of place > in Chrome in certain breadcrumbs
		System: directed Google OAuth to give offline access, ensure presence of refreshToken
		System: updated .gitignore to include .DS_store files
		System: updated PayPal integration to set localecode based on current Gibbon language
		System: updated the reincarnate image on Default theme
		System: removed robots meta tag
		Activities: added information to parent dashboard
		Activities: efficiency improvements in displaying time slots
		Activities: fixed bug which cut one student off print view of attendance print out
		Activities: fixed translation of blank string in Parent Dashboard Activity view
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
		Markbook: removed Learning Area rubrics from multiple column add
		Markbook: fixed return and presetting of fields when landing on add page from Planner
		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
		Messenger: fixed formatting of Sent From Gibbon tag
		Messenger: fixed display of email/SMS report for recipients with , in their name
		Messenger: disabled Canned Response for any non-staff users
		Messenger: doubled character limit on subject field
		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		Planner: added ability to tag units, in order to help build curriculum maps
		Planner: fixed lesson plan duplicate return bug, when not in current year