@@ -561,4 +561,6 @@ ALTER TABLE `gibbonLog` CHANGE `person` `gibbonPersonID` INT(10) UNSIGNED ZEROFI
 ALTER TABLE `gibbonLog` CHANGE `schoolYear` `gibbonSchoolYearID` INT(3) UNSIGNED ZEROFILL NULL DEFAULT NULL;end
 SELECT gibbonLogID FROM `gibbonLog` LIMIT 1;end
 INSERT INTO `gibboni18n` (`code`, `name`, `active`, `systemDefault`, `maintainerName`, `maintainerWebsite`, `dateFormat`, `dateFormatRegEx`, `dateFormatPHP`,`rtl`) VALUES ('fi_FI', 'Suomen Kieli - Suomi', 'N', 'N', 'Pia Kontiainen', '', 'dd-mm-yyyy', '/^(0[1-9]|[12][0-9]|3[01])[-](0[1-9]|1[012])[-](19|20)\\\d\\\d$/i', 'd-m-Y', 'N');end
+UPDATE `gibbonAction` SET `description` = 'Allows administrators to configure the system display settings.', `URLList` = 'displaySettings.php', `entryURL` = 'displaySettings.php' WHERE `name`='Display Settings' AND gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='System Admin');end
+UPDATE `gibbonSetting` SET `value` = 'Admin,Assess,Learn,People,Other', name='mainMenuCategoryOrder',`nameDisplay` = 'Main Menu Category Order', description='A comma separated list of module categories in display order.' WHERE `gibbonSetting`.`name` = 'mainMenuCategories' AND `scope` = 'System';end
 ";
