@@ -47,6 +47,7 @@ v13.0.00
 		System: updated PayPal integration to set localecode based on current Gibbon language
 		System: updated the reincarnate image on Default theme
 		System: removed robots meta tag
+		System: added ability to custom order module categories in main menu
 		Activities: added information to parent dashboard
 		Activities: efficiency improvements in displaying time slots
 		Activities: fixed bug which cut one student off print view of attendance print out
